tests/compile/use_after_free.stderr
error[E0499]: cannot borrow `token` as mutable more than once at a time
  --> tests/compile/use_after_free.rs:21:23
   |
13 |     let txn = db.read(&mut token);
   |                       ---------- first mutable borrow occurs here
...
21 |     let txn = db.read(&mut token);
   |                       ^^^^^^^^^^ second mutable borrow occurs here
22 |     for item in items {
   |                 ----- first borrow later used here
